--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,4 +26,8 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
+    // Add your dependencies here.
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.4' // Photon
 }
