--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,9 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+
+    maven { url = 'https://maven.brott.dev/' } // Needed for dashboard
+    maven { url = 'https://jitpack.io' } // Needed for Photon
 }
 
 dependencies {
@@ -17,5 +20,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
     implementation 'org.firstinspires.ftc:Vision:8.2.0'
+
+
+    // Optional
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.9' // Dashboard
+
 }
 
