--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,5 +29,5 @@ dependencies {
 
     // Add your dependencies here.
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
-    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.4' // Photon
+    //implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.4' // Photon
 }
